FIX: Sidebar Label Spacing CSS
Word label was too far right after last commit. Fixed

--- a/Style.css
+++ b/Style.css
@@ -357,7 +357,7 @@ header a:hover #HidTitle{
     opacity:1;
     height:24px;
     width:150px;
-    right:24px;
+    right:27px;
     /*31px*/
     font-size:100%;
 }
